--- a/styles/style.css
+++ b/styles/style.css
@@ -192,7 +192,10 @@ figure span{
     font-weight: 500;
 }
 .text{
-    width: 30vh;
+    width: 31vh;
+}
+.text p{
+    text-align: justify;
 }
 .text>*{
     padding: 0 0 15px 0;
