--- a/styles/style.css
+++ b/styles/style.css
@@ -329,11 +329,14 @@ figure span{
     padding: 10vh;
     justify-content: space-evenly;
     background-color: #001F89;
-    font-size: 24px;
+    font-size: 26px;
+    font-weight: 500;
 }
 .section__custom p{
     color: #E8E8E8;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: justify;
 }
 .sc_text > *{
     padding: 30px 0;
@@ -343,7 +346,7 @@ figure span{
 }
 .sc_text h2{
     font-size: 42px;
-    font-weight: 600;
+    font-weight: 700;
 }
 .custom__card{
     display: flex;
