--- a/styles/style.css
+++ b/styles/style.css
@@ -400,3 +400,23 @@ figure span{
     opacity: 85%;
 }
 
+.none{
+    display: none;
+}
+
+.detalles{
+    background-color: #00000086;
+    /* opacity: 50%; */
+    position: fixed;
+    top:0;
+    width: 100%;
+    height: 120vh;
+    z-index: 2000;
+}
+.presentacion{
+    width: 80%;
+    height: 80vh;
+    opacity: 100%;
+    margin: 10vh auto;
+    background-color: #fff;
+}
