--- a/styles/style.css
+++ b/styles/style.css
@@ -482,6 +482,7 @@ figure span{
    }
    .section__slogan{
         flex-direction: column;
+        width: 100% ;
         align-items: center;
         gap: 20px;
         text-align: center;
@@ -498,20 +499,30 @@ figure span{
     align-items: center;
     flex-direction: column;
     text-align: center;
+    padding: 4vh;
    }
    .section__info figure{
-    width: 60%;
+    min-width: 60%;
+    max-width: 95%;
    }
    .section__info figure img{
     height: 450px;
    }
    .info{
-    width: 70%;
+    min-width: 80%;
+    max-width: 100%;
     margin: 0;
+    padding: 1vh;
     }
-    /* .section__caracteristicas{
-
-    } */
+    .info h3{
+        font-size: 28px;
+    }
+    .info{
+        font-size: 16px;
+    }
+    .info>*{
+        padding: 15px 0;
+    }
     .boxFila{
         flex-direction: column;
         align-items: center;
@@ -524,5 +535,61 @@ figure span{
     .box{
         flex-direction: column;
         align-items: center;
+    }
+    .text h4{
+        font-size: 24px;
+    }
+    .text{
+        width: 35vh;
+    }
+    .box > *{
+        padding: 5px;
+    }
+    .section__caracteristicas{
+        width: 100%;
+    }
+    .section__caracteristicas h3{
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        font-size: 32px;
+    }
+    .section__pricing{
+        width: 100%;
+        border-radius: 0;
+    }
+    .price__boxes{
+        flex-direction: column;
+        align-items: center;
+        gap: 35px;
+    }
+    .little__boxes{
+        width: 50vh;
+        max-width: 95%;
+        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    }
+    .little__boxes p{
+        font-weight: 400;
+        width: 300px;
+    }
+    .section__custom{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-top: 50px;
+        padding: 5vh;
+    }
+    .sc_text > *{
+        padding: 20px 0;
+    }
+    .section__custom p{
+        text-align: center;
+        width: 90%;
+        font-size: 16px;
+        margin: 0 auto;
+    }
+    .sc_text h2{
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+    .sc_text {
+        width: 100%;
     }
 }
