--- a/styles/style.css
+++ b/styles/style.css
@@ -414,19 +414,42 @@ figure span{
     width: 80%;
     height: 80vh;
     margin: 10vh auto;
-    background: linear-gradient(90deg,#CAF3F9 12%, #045AFF 100%);
-}
-.presentacion div{
+    background: #101010;
+    border-radius: 15px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
+/* .presentacion div{
+    justify-content: space-around;
+} */
+.presentacion h2{
+    color: #fff;
+    font-size: 42px;
+    
+}
+.preview_area{
+    /* border: #fff 1px solid; */
+    width: 60%;
+    margin-left: 30px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+/* .select_Area{
+    width: 10%;
+} */
 .selectedPreview{
-    padding: 1px;
-    width: 70%;
-    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    /* padding: 1px;
+    align-items: center;
+    width: 70%; */
+    /* margin-top: 10px; */
 }
 .selectedPreview figure{
-    margin: 3vh 5vh;
+    background: #303030;
 }
 .selectedPreview figure img{
     width: 80%;
@@ -435,10 +458,9 @@ figure span{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 20%;
     margin: 4vh 5vh 3vh 0;
     padding: 10px 15px;
-    background: linear-gradient(180deg, #1C42C9 0%, #5572D8 100%);
+    background: #303030;
 }
 .previewImg figure img {
     width: 100%;
