--- a/styles/style.css
+++ b/styles/style.css
@@ -412,24 +412,19 @@ figure span{
 }
 .presentacion{
     width: 80%;
-    height: 80vh;
-    margin: 10vh auto;
+    margin: 3vh auto;
     background: #101010;
     border-radius: 15px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-between;
 }
-/* .presentacion div{
-    justify-content: space-around;
-} */
 .presentacion h2{
     color: #fff;
     font-size: 42px;
     
 }
 .preview_area{
-    /* border: #fff 1px solid; */
     width: 60%;
     margin-left: 30px;
     justify-content: center;
@@ -450,9 +445,13 @@ figure span{
 }
 .selectedPreview figure{
     background: #303030;
+    display: flex;
+    height: 500px;
+    overflow: auto;
 }
 .selectedPreview figure img{
-    width: 80%;
+    width: 100%;
+    margin: auto;
 }
 .previewImg{
     display: flex;
@@ -461,17 +460,31 @@ figure span{
     margin: 4vh 5vh 3vh 0;
     padding: 10px 15px;
     background: #303030;
+    color: #fff;
+    text-align: center;
+}
+.previewImg h3{
+    font-weight: 300;
+    text-align: center;
 }
 .previewImg figure img {
-    width: 100%;
-    height: 23vh;
+    width: 90%;
+    /* border: #303030 solid 0.1px; */
+    height: 100%;
     object-fit: cover;
     object-position: top;
 }
-.previewImg figure img:hover{
-    border: #001F89 solid 3px;
-    border-radius: 10px;
+.previewImg figure {
+    margin-top: 20px;
+    height: 23vh;
+    background: #101010;
+}
+.previewImg figure:hover{
+    background: #D8D8D8;
     cursor: pointer;
+}
+.previewImg figure img:hover{
+    border: #D8D8D8 3px solid ;
 }
 .none > *, div.none{
     display: none;
