--- a/styles/style.css
+++ b/styles/style.css
@@ -469,7 +469,6 @@ figure span{
 }
 .previewImg figure img {
     width: 90%;
-    /* border: #303030 solid 0.1px; */
     height: 100%;
     object-fit: cover;
     object-position: top;
@@ -509,10 +508,10 @@ figure span{
 @media only screen and (max-width: 950px) {
     .presentacion{
         flex-direction: column;
-        width: 95%;
+        width: 100%;
         justify-content: center;
         align-items: center;
-        margin-top: 0;
+        margin-top: 2vh;
     }
     .selectedPreview{
         justify-content: center;
@@ -523,11 +522,16 @@ figure span{
     }
     .selectedPreview figure{
         width: 95%;
-        height: 30%;
+        height: 400px;
+    }
+    .select_Area{
+        width: 100%;
     }
     .selectedPreview figure img{
         /* min-width: 75%; */
-        max-width: 90%;
+        width: 95%;
+        height: 100%;
+        object-fit: contain;
     }
     .preview_area{
         width: 100%;
@@ -536,6 +540,17 @@ figure span{
     .previewImg{
         flex-direction: row;
         margin: 20px 0;
+        width: 100%;
+        padding: 0;
+    }
+    .previewImg figure{
+        height: 20vh;
+        width: 50%;
+        margin: 0 5px;
+    }
+    .previewImg figure img{
+        width: 100%;
+        object-fit: cover;
     }
     .previewImg h3{
         display: none;
