--- a/styles/style.css
+++ b/styles/style.css
@@ -423,6 +423,7 @@ figure span{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: space-between;
+    gap: 1rem;
 }
 .presentacion h2{
     color: #fff;
@@ -450,21 +451,18 @@ figure span{
     flex-direction: column;
     text-align: center;
 }
-/* .select_Area{
-    width: 10%;
-} */
 .selectedPreview{
     display: flex;
     flex-direction: column;
-    /* padding: 1px;
-    align-items: center;
-    width: 70%; */
-    /* margin-top: 10px; */
+    margin-left: 2rem;
+}
+.selectedPreview h2{
+    margin-bottom: 1.5rem;
 }
 .selectedPreview figure{
     background: #303030;
     display: flex;
-    height: 500px;
+    height: 40rem;
     overflow: auto;
 }
 .selectedPreview figure img{
@@ -538,6 +536,7 @@ figure span{
     .selectedPreview{
         justify-content: center;
         align-items: center;
+        margin-left: 0;
     }
     .selectedPreview h2{
         font-size: 28px;
